[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/game/mode/fugitive/motion_sensor/MotionSensor.gd" type="Script" id=1]
[ext_resource path="res://common/game/mode/fugitive/motion_sensor/light.ogg" type="AudioStream" id=2]
[ext_resource path="res://common/game/mode/fugitive/motion_sensor/garage_light.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 3 )

[node name="MotionSensor" type="Spatial"]
script = ExtResource( 1 )

[node name="garage_light" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.193219 )
light_color = Color( 1, 0.980392, 0.956863, 1 )
light_energy = 3.0
light_bake_mode = 0
omni_range = 8.0
omni_attenuation = 0.5
omni_shadow_mode = 0

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1 )
collision_mask = 5

[node name="AutoOffTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="LightTriggerAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )

[node name="MotionSensorArea" type="Area" parent="."]
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="MotionSensorArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 3 )
shape = SubResource( 1 )
[connection signal="timeout" from="AutoOffTimer" to="." method="_on_AutoOffTimer_timeout"]
[connection signal="body_entered" from="MotionSensorArea" to="." method="_on_MotionSensorArea_body_entered"]
